# blog-to-learning

./: .env-template  .gitignore  Dockerfile  README.md  boot.sh  config.py  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  manage.py  pyproject.toml  requirements-dev.txt  run.sh  wsgi.py
app/: keygen.py  run.py
app/blog/admin/: admin.py  post_admin.py  user_admin.py
app/blog/configurations/: __init__.py
app/blog/database/: db.py  models.py
app/blog/editor/: __init__.py
app/blog/forms/: forms.py
app/blog/templates/: base.html  index.html  post_category.html  post_detail.html
app/blog/views/: author.py  main.py  posts.py
app/instance/: dados.db
assets/: conceptual_model_application.brM3  model_logic_application.brM3
blog/: app.py  dados.db  db-dev.sqlite
blog/admin/: admin.py  category_admin.py  index.py  post_admin.py  user_admin.py
blog/configurations/: __init__.py
blog/controllers/: controller.py
blog/database/: db.py  models.py
blog/editor/: __init__.py
blog/forms/: forms.py
blog/login/: __init__.py
blog/static/css/: auth.css
blog/templates/: base.html  edit.html  index.html  post_category.html  post_detail.html
blog/views/: __init__.py  auth.py  categories.py  main.py  posts.py  upload.py
docker/app/: Dockerfile  Dockerfile-dev  boot.sh  entrypoint.sh  requirements.txt
docker/postgres/: Dockerfile
migrations/versions/: 0318ef6f0651_teste.py  304373ab10a8_init_db.py  362097718dda_init_db.py  d2bde062bf84_first_migration.py
venv-blog/: pyvenv.cfg
venv-blog/Scripts/: activate  activate.bat
(+9 files in other folders)
