[tool.poetry]
name = "techster"
version = "0.3.0"
description = "none"
authors = ["Fabiano Amaral Alves"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask-Zipper = "^1.0.1"
email-validator = "^1.3.1"
flask = "^2.2.3"
flask-login = "^0.6.2"
flask-ckeditor = "^0.4.6"
flask-migrate = "^4.0.4"
flask-admin = "^1.6.1"
flask-sqlalchemy = "^3.0.3"
flask-wtf = "^1.1.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
